--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,18 @@ application {
     mainClass = 'ranked.sim.Main'
 }
 
+jacoco {
+    toolVersion = "0.8.10"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
 test {
     useJUnitPlatform()
 }
