--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,8 @@ jobs:
         run: ./gradlew test jacocoTestReport  # Uruchom testy i generuj raport coverage
         
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: build/reports/jacoco/test/jacocoTestReport.xml  # Ścieżka do raportu
           fail_ci_if_error: false  # Nie przerywaj CI jeśli upload się nie uda
